# novel-scrapers

./: .gitignore  README.md  convert_epub_to_txts.py  justfile  pyproject.toml
src/novel_scrapers/: __init__.py  __main__.py  novel_scraper.py
src/novel_scrapers/scrapers/: fichub.py  royal_road.py
