[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-scrapers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "requests",
    "fichub-cli",
    "click",
    "beautifulsoup4",
    "epub2txt>=0.1.6",
]

[tool.setuptools.dynamic]
version = { file = "src/novel_scrapers/VERSION.txt" }

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy"]

[tool.setuptools]
zip-safe = true
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
src_paths = ["src/novel_scrapers", "tests"]
known_first_party = ["novel-scrapers"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_imports = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[tool.ruff]
select = ["B", "C90", "E", "F", "W"]
ignore = ["E501"]
line-length = 88


